--- a/src/components/TeamUXIn2024Disclaimer.astro
+++ b/src/components/TeamUXIn2024Disclaimer.astro
@@ -30,10 +30,10 @@ import Icon from "./@common/Icon.astro";
     </p>
     <br />
     <p>
-      Daniela intègre une entreprise à mission, en rejoignant une grosse équipe
+      Daniela intègre une entreprise à mission et rejoint une grosse équipe
       produit. Yuna poursuit son projet freelance en tant que designer
-      stratégique et UX senior et collabore avec nos clientes et clients ainsi
-      que de nouvelles structures.
+      stratégique et UX ; elle collabore avec nos clientes et clients ainsi que
+      de nouvelles structures.
     </p>
     <br />
     <p>
