chore(tailwind): use upgrade tool

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -63,7 +63,7 @@ const backgroundFormCSSClasses = showBackgroundForm
           >
             Contactez-nous à l’adresse
             <CallToAction
-              class="underline !text-inherit !underline-offset-[10px] hover:!text-primary"
+              class="underline text-inherit! underline-offset-[10px]! hover:text-primary!"
               variant="transparent"
               type="secondary"
               href="mailto:hello@team-ux.com"
@@ -75,7 +75,7 @@ const backgroundFormCSSClasses = showBackgroundForm
             type="secondary"
             textToCopy="hello@team-ux.com"
             toastCopySuccessText="Notre adresse e-mail a été copiée dans votre presse-papiers !"
-            class="max-lg:!hidden lg:mt-10"
+            class="max-lg:hidden! lg:mt-10"
           >
             Copier notre adresse email dans votre presse-papiers
           </ButtonCopyText>
