--- a/src/components/Daniela.astro
+++ b/src/components/Daniela.astro
@@ -12,7 +12,7 @@ const { width, height, class: cssClasses, alt = "", ...props } = Astro.props;
     class:list={[
       "rounded-t-full",
       "rounded-b-full",
-      "aspect-[13/32]",
+      "aspect-13/32",
       cssClasses,
     ]}
     alt={alt}
