--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,7 +15,7 @@ import NavItem from "./Header/NavItem.astro";
         rightIcon="open_in_new"
         type="primary"
         variant="transparent"
-        class="!text-label-large lg:!text-label-medium-bold"
+        class="text-label-large! lg:text-label-medium-bold!"
       >
         Team UX sur LinkedIn
       </CallToAction>
