--- a/src/components/pages/glossaire-ux-design/Glossaire.astro
+++ b/src/components/pages/glossaire-ux-design/Glossaire.astro
@@ -65,7 +65,7 @@ const currentPath = new URL(Astro.url.pathname, Astro.site);
 <section>
   <div
     id="sticky-letters-nav"
-    class="hidden sticky top-[83px] bg-surface1 z-[1]"
+    class="hidden sticky top-[83px] bg-surface1 z-1"
   >
     <div class="hidden lg:block container">
       <Grid>
