--- a/src/components/pages/homepage/Expertises/Expertise.astro
+++ b/src/components/pages/homepage/Expertises/Expertise.astro
@@ -17,7 +17,7 @@ const { expertise } = Astro.props;
     {
       expertise.skills.map((skill) => {
         return (
-          <li class="text-body-medium bg-surface5 rounded">
+          <li class="text-body-medium bg-surface5 rounded-sm">
             <h4>{skill}</h4>
           </li>
         );
