--- a/src/components/pages/homepage/Expertises/index.astro
+++ b/src/components/pages/homepage/Expertises/index.astro
@@ -39,7 +39,7 @@ import Expertise from "./Expertise.astro";
                 {index === 1 && (
                   <Brush
                     id={4}
-                    class="max-lg:hidden absolute top-[-39px] lg:left-[300px] xl:left-[481px] z-[-1] w-[490px] aspect-[490/487]"
+                    class="max-lg:hidden absolute top-[-39px] lg:left-[300px] xl:left-[481px] z-[-1] w-[490px] aspect-490/487"
                   />
                 )}
 
