--- a/src/components/pages/homepage/Hero.astro
+++ b/src/components/pages/homepage/Hero.astro
@@ -29,7 +29,7 @@ import DuoDeChoc from "components/DuoDeChoc.astro";
         </p>
 
         <CallToAction
-          class="relative z-[1] max-lg:m-1.5"
+          class="relative z-1 max-lg:m-1.5"
           href="/projets"
           rightIcon="forward"
         >
