--- a/src/components/pages/plan-du-site/Content.astro
+++ b/src/components/pages/plan-du-site/Content.astro
@@ -10,7 +10,7 @@ import CallToAction from "components/@common/CallToAction.astro";
         class="flex flex-col max-lg:space-y-8 lg:space-y-5 p-5 lg:p-10 bg-neutral4 rounded-[26px]"
       >
         <h2 class="text-headline-small">Arborescence principale :</h2>
-        <ul class="ml-7 list-disc list-outside !text-body-medium">
+        <ul class="ml-7 list-disc list-outside text-body-medium!">
           <li>
             <CallToAction href="/" variant="transparent">
               Page d’accueil
