--- a/src/components/pages/projets/AllProjects/LargeProject.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject.astro
@@ -169,7 +169,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial) && project.testim
                   <a
                     href={hrefPNG}
                     target="_blank"
-                    class="project-image-link lg:aspect-[431/361] relative flex overflow-hidden rounded-md lg:rounded-lg"
+                    class="project-image-link lg:aspect-431/361 relative flex overflow-hidden rounded-md lg:rounded-lg"
                   >
                     <CallToAction tabindex="-1" class="opacity-0 absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2" type="secondary" rightIcon="open_in_new">
                       Ouvrir l'image
@@ -192,7 +192,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial) && project.testim
               );
             })}
           </ul>
-          <div class="flex max-lg:flex-col max-lg:items-start items-center max-lg:space-y-2.5 lg:space-x-2.5 bg-surface7 px-5 py-5 lg:py-2.5 rounded">
+          <div class="flex max-lg:flex-col max-lg:items-start items-center max-lg:space-y-2.5 lg:space-x-2.5 bg-surface7 px-5 py-5 lg:py-2.5 rounded-sm">
             <span role="presentation">
               <Icon name="photo_prints" width={38} height={38} />
             </span>
