--- a/src/components/pages/demarche-eco-conception/Content.astro
+++ b/src/components/pages/demarche-eco-conception/Content.astro
@@ -88,7 +88,7 @@ import Block from "./Block.astro";
         Détail par page
       </h3>
     </Grid>
-    <Grid class="max-sm:!px-0">
+    <Grid class="max-sm:px-0!">
       <div
         class="overflow-x-auto col-span-full lg:col-start-2 lg:col-span-9 px-5 sm:px-0"
       >
