--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -64,10 +64,10 @@ const { block1, block2 } = data;
           >
             <h3 class="text-headline-medium-bold">{block2.title}</h3>
             <div class="relative w-[200px] lg:w-auto mx-auto lg:mx-0">
-              <Brush id={1} class="w-[133px] lg:w-[173px] aspect-[16/19]" />
+              <Brush id={1} class="w-[133px] lg:w-[173px] aspect-16/19" />
               <Brush
                 id={4}
-                class="absolute top-0 left-[41px] lg:left-[52px] w-[160px] lg:w-[207px] aspect-[490/487]"
+                class="absolute top-0 left-[41px] lg:left-[52px] w-[160px] lg:w-[207px] aspect-490/487"
               />
             </div>
             <p class="text-body-medium">{block2.paragraph}</p>
