--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @config '../../tailwind.config.ts';
 
@@ -196,4 +196,10 @@
     line-height: 19px;
     font-weight: 700;
   }
+}
+
+@utility .text-inherit: {
+  font-size: inherit;
+  line-height: inherit;
+  font-weight: inherit;
 }
