--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -20,6 +20,14 @@
   }
 }
 
+@utility container {
+  margin-inline: auto;
+
+  @media (width >= theme(--breakpoint-2xl)) {
+    width: 1413px;
+  }
+}
+
 @utility responsive-wrapper {
   @apply px-5 md:px-8 lg:px-[50px] 2xl:px-0;
 }
