fix: utility syntax

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -224,7 +224,7 @@
   }
 }
 
-@utility .text-inherit: {
+@utility text-inherit {
   font-size: inherit;
   line-height: inherit;
   font-weight: inherit;
