refactor: use @reference for @apply

--- a/src/components/@common/CallToAction.astro
+++ b/src/components/@common/CallToAction.astro
@@ -61,6 +61,8 @@ const iconSize = variant === "transparent" ? 18 : 24;
 </HTMLTag>
 
 <style>
+  @reference '../../styles/base.css';
+
   .call-to-action {
     display: flex;
     align-items: center;
