--- a/src/components/@common/Icon.astro
+++ b/src/components/@common/Icon.astro
@@ -16,6 +16,7 @@ export interface Props {
     | "visibility"
     | "chevron_right_breadcrumb"
     | "cross"
+    | "hamburger"
     | "arrow_up";
   width?: number;
   height?: number;
