--- a/src/components/Header/NavItemContact.astro
+++ b/src/components/Header/NavItemContact.astro
@@ -1,6 +1,8 @@
 <a href="#contact">Contact</a>
 
 <style>
+  @reference '../../styles/base.css';
+
   a {
     @apply bg-surface3 hover:bg-surface4;
 
