--- a/src/components/TeamUXIn2024Disclaimer.astro
+++ b/src/components/TeamUXIn2024Disclaimer.astro
@@ -95,6 +95,8 @@ import Icon from "./@common/Icon.astro";
 </dialog>
 
 <style>
+  @reference '../styles/base.css';
+
   dialog {
     & :global(a:not(.call-to-action)) {
       @apply text-primary underline underline-offset-[4px];
