--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -208,6 +208,8 @@ const { block1, block2 } = data;
 </section>
 
 <style>
+  @reference '../../../../styles/base.css';
+
   .certifications {
     @apply flex items-center flex-wrap justify-around sm:justify-start 2xl:justify-between -mx-5;
 
