--- a/src/components/pages/mentions-legales/Content.astro
+++ b/src/components/pages/mentions-legales/Content.astro
@@ -81,6 +81,8 @@ function obfuscateContent(content) {
 </div>
 
 <style>
+  @reference '../../../styles/base.css';
+
   .mentions-legales {
     & :global(a[href^="tel"]),
     & :global(a[href^="mailto"]) {
