--- a/src/components/pages/nos-deux-profils/ItsAMatch.astro
+++ b/src/components/pages/nos-deux-profils/ItsAMatch.astro
@@ -118,6 +118,8 @@ import CurvedContainer from "components/CurvedContainer/index.astro";
 </section>
 
 <style>
+  @reference '../../../styles/base.css';
+
   ul {
     & li {
       @apply relative flex flex-col items-center text-center whitespace-nowrap;
