--- a/src/components/pages/notre-manifeste/Hero.astro
+++ b/src/components/pages/notre-manifeste/Hero.astro
@@ -13,6 +13,8 @@ import data from "data/notre-manifeste/hero.yaml";
 </div>
 
 <style>
+  @reference '../../../styles/base.css';
+
   div :global(h2) {
     @apply lg:col-start-2 lg:col-span-7;
   }
