--- a/src/components/pages/plan-du-site/Content.astro
+++ b/src/components/pages/plan-du-site/Content.astro
@@ -77,6 +77,8 @@ import CallToAction from "components/@common/CallToAction.astro";
 </section>
 
 <style>
+  @reference '../../../styles/base.css';
+
   ul {
     li {
       line-height: 44px;
