--- a/src/components/pages/projets/AllProjects/LargeProject.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject.astro
@@ -208,6 +208,8 @@ const hasManyTestimonials = Array.isArray(project.testimonial) && project.testim
 </div>
 
 <style>
+    @reference '../../../../styles/base.css';
+
     .testimonials[open] {
         :global([data-icon="expand_more"]) {
             transform: scaleY(-1);
