--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -83,6 +83,8 @@ const { title, description, og_description, og_title } = Astro.props;
     <Toast />
 
     <style is:global>
+      @reference '../styles/base.css';
+
       body {
         @apply bg-surface1 text-secondary;
       }
