--- a/src/components/pages/demarche-eco-conception/Content.astro
+++ b/src/components/pages/demarche-eco-conception/Content.astro
@@ -17,7 +17,7 @@ import Block from "./Block.astro";
         <p class="text-headline-medium-bold mb-8">B (76,4/100)</p>
         <p class="text-label-medium">
           La meilleure note possible est A <br />
-           Le meilleur score possible est 100
+          Le meilleur score possible est 100
         </p>
       </div>
     </div>
@@ -218,6 +218,8 @@ import Block from "./Block.astro";
 </div>
 
 <style>
+  @reference '../../../styles/base.css';
+
   .demarche-eco-conception {
     & :global(ul) {
       & :global(ul) {
