--- a/src/components/pages/glossaire-ux-design/Hero.astro
+++ b/src/components/pages/glossaire-ux-design/Hero.astro
@@ -11,6 +11,8 @@ import CommonPageHero from "components/CommonPageHero.astro";
 </div>
 
 <style>
+  @reference '../../../styles/base.css';
+
   div :global(h2) {
     @apply col-span-full lg:col-start-2 lg:col-span-7;
   }
