fix: replace @screen with @variant

--- a/src/components/Header/Logo.astro
+++ b/src/components/Header/Logo.astro
@@ -22,11 +22,13 @@ const htmlAttributes =
 </a>
 
 <style>
+  @reference "../../styles/base.css";
+
   :global([data-icon="logo"]) {
     width: 170px;
     height: 36px;
 
-    @screen lg {
+    @variant lg {
       width: 189px;
       height: 40px;
     }
