--- a/src/components/Header/NavItem.astro
+++ b/src/components/Header/NavItem.astro
@@ -75,7 +75,7 @@ const selected =
     }
   }
 
-  @screen lg {
+  @variant lg {
     .nav-item {
       position: relative;
       white-space: nowrap;
