--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -157,14 +157,14 @@ import NavItems from "./NavItems.astro";
     }
   }
 
-  @screen 2xl {
+  @variant 2xl {
     header {
       margin-left: -40px;
       margin-right: -40px;
     }
   }
 
-  @screen lg {
+  @variant lg {
     header {
       margin-left: 9px;
       margin-right: 9px;
@@ -189,7 +189,7 @@ import NavItems from "./NavItems.astro";
       animation-name: mobile-sticky-bg-white-header;
     }
 
-    @screen lg {
+    @variant lg {
       header {
         animation-name: desktop-sticky-bg-white-header;
       }
