--- a/src/components/pages/projets/AllProjects/LargeProject.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject.astro
@@ -232,7 +232,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial) && project.testim
     }
   }
 
-  @screen lg {
+  @variant lg {
     .project-image-link {
       &:before {
         @apply bg-primary;
