--- a/src/components/CurvedContainer/index.astro
+++ b/src/components/CurvedContainer/index.astro
@@ -15,6 +15,8 @@ interface Props {
 </div>
 
 <style>
+  @reference "../../styles/base.css";
+
   div :global(.curve) {
     width: 100%;
     height: 10px;
@@ -24,7 +26,7 @@ interface Props {
     }
   }
 
-  @screen 2xl {
+  @variant 2xl {
     div :global(.curve) {
       height: 145px;
     }
