--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -38,10 +38,14 @@
   --color-neutral4: #fff;
 }
 
+@custom-variant lg (@media (width >= theme(--breakpoint-lg)));
+@custom-variant xl (@media (width >= theme(--breakpoint-xl)));
+@custom-variant 2xl (@media (width >= theme(--breakpoint-2xl)));
+
 @utility container {
   margin-inline: auto;
 
-  @media (width >= theme(--breakpoint-2xl)) {
+  @variant 2xl {
     width: 1413px;
   }
 }
@@ -55,7 +59,7 @@
   line-height: 57px;
   font-weight: 700;
 
-  @media (width >= theme(--breakpoint-lg)) {
+  @variant lg {
     font-size: 72px;
     line-height: 84px;
     font-weight: 700;
@@ -73,7 +77,7 @@
   line-height: 32px;
   font-weight: 500;
 
-  @media (width >= theme(--breakpoint-lg)) {
+  @variant lg {
     font-size: 32px;
     line-height: 43px;
     font-weight: 900;
@@ -85,7 +89,7 @@
   line-height: normal;
   font-weight: 900;
 
-  @media (width >= theme(--breakpoint-lg)) {
+  @variant lg {
     font-size: 25px;
     line-height: 34px;
     font-weight: 900;
@@ -97,7 +101,7 @@
   line-height: normal;
   font-weight: 700;
 
-  @media (width >= theme(--breakpoint-lg)) {
+  @variant lg {
     font-size: 25px;
     line-height: 34px;
     font-weight: 700;
@@ -121,7 +125,7 @@
   line-height: 29px;
   font-weight: 500;
 
-  @media (width >= theme(--breakpoint-lg)) {
+  @variant lg {
     font-size: 20px;
     line-height: 27px;
     font-weight: 700;
@@ -139,7 +143,7 @@
   line-height: 28px;
   font-weight: 500;
 
-  @media (width >= theme(--breakpoint-lg)) {
+  @variant lg {
     font-size: 18px;
     line-height: 28px;
     font-weight: 500;
@@ -151,7 +155,7 @@
   line-height: 28px;
   font-weight: 700;
 
-  @media (width >= theme(--breakpoint-lg)) {
+  @variant lg {
     font-size: 18px;
     line-height: 28px;
     font-weight: 700;
@@ -169,7 +173,7 @@
   line-height: 22px;
   font-weight: 700;
 
-  @media (width >= theme(--breakpoint-lg)) {
+  @variant lg {
     font-size: 16px;
     line-height: 22px;
     font-weight: 500;
@@ -177,7 +181,7 @@
 }
 
 @utility text-display-medium {
-  @media (width >= theme(--breakpoint-lg)) {
+  @variant lg {
     font-size: 60px;
     line-height: 82px;
     font-weight: 700;
@@ -185,7 +189,7 @@
 }
 
 @utility text-display-small {
-  @media (width >= theme(--breakpoint-lg)) {
+  @variant lg {
     font-size: 48px;
     line-height: 65px;
     font-weight: 700;
@@ -193,7 +197,7 @@
 }
 
 @utility text-body-extra-large {
-  @media (width >= theme(--breakpoint-lg)) {
+  @variant lg {
     font-size: 28px;
     line-height: 38px;
     font-weight: 500;
@@ -201,7 +205,7 @@
 }
 
 @utility text-body-small {
-  @media (width >= theme(--breakpoint-lg)) {
+  @variant lg {
     font-size: 14px;
     line-height: 19px;
     font-weight: 500;
@@ -209,7 +213,7 @@
 }
 
 @utility text-label-medium-bold {
-  @media (width >= theme(--breakpoint-lg)) {
+  @variant lg {
     font-size: 16px;
     line-height: 22px;
     font-weight: 700;
@@ -217,7 +221,7 @@
 }
 
 @utility text-label-small {
-  @media (width >= theme(--breakpoint-lg)) {
+  @variant lg {
     font-size: 14px;
     line-height: 19px;
     font-weight: 700;
