--- a/src/components/Header/NavItems.astro
+++ b/src/components/Header/NavItems.astro
@@ -44,14 +44,14 @@ const isSelected = items.some(
   @reference '../../styles/base.css';
 
   :global(button.nav-item) {
-    &:not(.selected):hover {
+    :not(.selected):hover {
       :global(.title) {
         color: var(--color-secondary) !important;
       }
     }
 
     :global([data-icon="arrow_drop_down"]) {
-      @apply text-primary;
+      color: var(--color-primary);
     }
   }
 
@@ -66,8 +66,6 @@ const isSelected = items.some(
   }
 
   .submenu-container {
-    @apply bg-neutral4;
-
     display: none;
     position: absolute;
     padding-top: 16px;
@@ -77,6 +75,7 @@ const isSelected = items.some(
     transform: translateX(-50%);
     border-radius: 10px;
     box-shadow: 0 2px 4px 0 rgba(8, 18, 79, 0.25);
+    background-color: var(--color-neutral4);
 
     :global(.nav-item .title) {
       color: var(--color-secondary) !important;
@@ -103,7 +102,7 @@ const isSelected = items.some(
 
       &:is(.selected),
       &:hover {
-        @apply bg-surface5;
+        background-color: var(--color-surface5);
       }
     }
   }
