refactor: replace @apply with css var

--- a/src/components/@common/CallToAction.astro
+++ b/src/components/@common/CallToAction.astro
@@ -125,15 +125,15 @@ const iconSize = variant === "transparent" ? 18 : 24;
       }
 
       &.primary {
-        @apply text-primary;
+        color: var(--text-primary);
 
         &:hover {
-          @apply text-secondary;
+          color: var(--text-secondary);
         }
       }
 
       &.secondary {
-        @apply text-secondary;
+        color: var(--text-secondary);
       }
     }
   }
