--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -74,7 +74,7 @@ const urlPageTitles = new Map([
     }
 
     a {
-      @apply text-secondary;
+      color: var(--text-secondary);
     }
 
     span {
