--- a/src/components/pages/plan-du-site/Content.astro
+++ b/src/components/pages/plan-du-site/Content.astro
@@ -89,7 +89,7 @@ import CallToAction from "components/@common/CallToAction.astro";
     }
 
     li::marker {
-      @apply text-primary;
+      color: var(--text-primary);
     }
 
     & :global(a) {
