--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -153,7 +153,7 @@ import NavItems from "./NavItems.astro";
 
   #mobile-menu {
     :global([data-icon="arrow_drop_down"]) {
-      @apply text-primary;
+      color: var(--text-primary);
     }
 
     :global(.nav-item) {
