fix: :global is not working anymore apparently

--- a/src/components/Header/Logo.astro
+++ b/src/components/Header/Logo.astro
@@ -24,7 +24,7 @@ const htmlAttributes =
 <style>
   @reference "../../styles/base.css";
 
-  :global([data-icon="logo"]) {
+  [data-icon="logo"] {
     width: 170px;
     height: 36px;
 
