--- a/src/components/Header/NavItems.astro
+++ b/src/components/Header/NavItems.astro
@@ -43,28 +43,6 @@ const isSelected = items.some(
 <style>
   @reference '../../styles/base.css';
 
-  :global(button.nav-item) {
-    :not(.selected):hover {
-      :global(.title) {
-        color: var(--color-secondary) !important;
-      }
-    }
-
-    :global([data-icon="arrow_drop_down"]) {
-      color: var(--color-primary);
-    }
-  }
-
-  :global(button.nav-item.opened) {
-    :global([data-icon="arrow_drop_down"]) {
-      transform: rotateZ(180deg);
-    }
-
-    .submenu-container {
-      display: block;
-    }
-  }
-
   .submenu-container {
     display: none;
     position: absolute;
@@ -77,7 +55,7 @@ const isSelected = items.some(
     box-shadow: 0 2px 4px 0 rgba(8, 18, 79, 0.25);
     background-color: var(--color-neutral4);
 
-    :global(.nav-item .title) {
+    .nav-item .title {
       color: var(--color-secondary) !important;
     }
   }
