fix: 2xl breakpoint

--- a/src/components/CurvedContainer/index.astro
+++ b/src/components/CurvedContainer/index.astro
@@ -25,8 +25,8 @@ interface Props {
       transform: scaleY(-1);
     }
 
-    @variant 2xl {
-      height: 145px;
+    @variant xl {
+      height: 100px;
     }
   }
 </style>
