feat: disclaimer invert ctas

--- a/src/components/TeamUXIn2024Disclaimer.astro
+++ b/src/components/TeamUXIn2024Disclaimer.astro
@@ -75,18 +75,19 @@ import Icon from "./@common/Icon.astro";
         >
           <CallToAction
             variant="transparent"
-            rightIcon="open_in_new"
-            href="https://yuna.work"
-          >
-            Briefer Yuna pour un projet UX
-          </CallToAction>
-
-          <CallToAction
             as="button"
             rightIcon="forward"
             class="close-2024-disclaimer"
           >
             Voir le site Team UX
+          </CallToAction>
+
+          <CallToAction
+            target="_blank"
+            rightIcon="open_in_new"
+            href="https://yuna.work"
+          >
+            Briefer Yuna pour un projet UX
           </CallToAction>
         </div>
       </form>
