feat: header 100% height

--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -126,6 +126,8 @@ import NavItems from "./NavItems.astro";
     }
 
     &[data-menu-opened="true"] {
+      height: 100vh;
+      height: 100dvh;
       background-color: var(--color-surface2) !important;
 
       & #menu-opener {
