feat: header not fixed anymore

--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -63,7 +63,7 @@ import NavItems from "./NavItems.astro";
   </div>
   <div
     id="mobile-menu"
-    class="hidden overflow-y-auto overflow-x-hidden fixed top-[84px] left-0 w-full h-[calc(100%-84px)] px-5 pb-5 pt-9 bg-surface2"
+    class="hidden overflow-y-auto overflow-x-hidden mt-5 left-0 w-full h-[calc(100%-44px)] px-5 pb-5 pt-9 bg-surface2"
   >
     <nav role="navigation" class="text-headline-large">
       <ul class="flex flex-col space-y-11">
